// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageConfirmationNavItem should render design 1`] = `
<PageConfirmationNavItem__StyledPageItem
  data-test="question-confirmation-item"
  sectionId="2"
>
  <PageConfirmationNavItem__StyledNavLink
    data-test="question-confirmation-link"
    errorCount={0}
    icon={[Function]}
    title="Confirmation display name"
    to="/q/1/question-confirmation/4/design"
  >
    Confirmation display name
  </PageConfirmationNavItem__StyledNavLink>
</PageConfirmationNavItem__StyledPageItem>
`;

exports[`PageConfirmationNavItem should render preview 1`] = `
<PageConfirmationNavItem__StyledPageItem
  data-test="question-confirmation-item"
  sectionId="2"
>
  <PageConfirmationNavItem__StyledNavLink
    data-test="question-confirmation-link"
    errorCount={0}
    icon={[Function]}
    title="Confirmation display name"
    to="/q/1/question-confirmation/4/preview"
  >
    Confirmation display name
  </PageConfirmationNavItem__StyledNavLink>
</PageConfirmationNavItem__StyledPageItem>
`;
